# ChronoModbus

./: .gitignore  README.md  pyproject.toml
data/: example.csv
src/: app.py  farm_generator.py  industrial_generator.py
